Fixed css picture errors for schools and font error for awards overflowing the div on firefox.

--- a/public/education.css
+++ b/public/education.css
@@ -103,7 +103,7 @@ p {
 }
 .img-clc, .img-lewis {
     width: 100%;
-    height: 30%;
+    height: 100%;
 }
 .school-list {
     display: flex;
@@ -300,7 +300,7 @@ p {
         font-size: 1.8vw;
     }
     .col-paragraph.awards {
-        font-size: 1.8vw;
+        font-size: 1.75vw;
     }
     .box-awards {
         display: flex;
